www/css/style.css
/* ... */
.ol-touch .layer-switcher button{
  padding: 15px;
}
#toggleButton{
  font-size: 18px;
}

/*--------------------
Map Popups Style
--------------------*/
.ol-popup {
  padding: 5px;
}

.popup-more-button {
  float: right;
}

/*--------------------
Buttons
--------------------*/

.button-text-small {
  color: black;
  font-size: small;
}

.button-text-big {
  color: black;
  font-weight: bold;
}

.divider-buttons-right .item-divider i {
  position: absolute;
  right: 10px;
}

.rotate-90 {
  -moz-transform: rotate(90deg);
  -webkit-transform: rotate(90deg);
  -o-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.strabo-color-box-button-right {
  position: absolute;
  right: 10px;
  top: 11px;
  width: 20px;
  height: 20px;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: lightgrey;
}

.strabo-color-box-button-left {
  float: left;
  margin-right: 10px;
  width: 20px;
  height: 20px;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: lightgrey;
}

.crossed {
  background-image: linear-gradient(to bottom right,  transparent calc(50% - 1px), lightgray, transparent calc(50% + 1px));
}

.calc-trend-plunge-text {
  font-size: 10px;
  word-break: break-word;
  line-height: 10px;
  width: 30px;
}

.close-modal-button {
  color: lightgray;
  position: relative;
  top: -5px;
  background: transparent;
  border: none;
}

/*--------------------
Orientation Tab Style
--------------------*/

.orientation-text {
  font-weight: bold;
  text-transform: uppercase;
}

.orientation-label {
  font-weight: normal;
  font-size: small;
  text-transform: initial;
}

.orientation-reference {
  background: lightgray;
  font-size: x-small;
}

/*--------------------
Online & Offline Notification Circles
--------------------*/
.online{
  width:15px;
  height:15px;
  border-radius:7.5px;
  background:linear-gradient(to bottom, #33FF00, #006600)
}

.offline{
  width:15px;
  height:15px;
  border-radius:7.5px;
  background:linear-gradient(to bottom, #FF3333, #990000)
}

/*--------------------
Tabs Style
--------------------*/
.tabs {
  height: 29px;
  line-height: 29px;
}
.has-tabs-top {
  top: 73px;
}
.active-tags {
  background-color: lightgray;
}

/*--------------------
Image Modal Style: used for image active-slider when choosing spot images
--------------------*/
.image-list-thumb {
  padding: 2px 2px 2px 2px;
  height: 100px;
}

.image-modal {
  width: 100% !important;
  height: 100%;
  top: 0 !important;
  left: 0 !important;
}

.transparent {
  background: transparent !important;
}

.fullscreen-image {
  max-width: 100%;
  max-height: 100%;
  bottom: 0;
  left: 0;
  margin: auto;
  overflow: auto;
  position: fixed;
  right: 0;
  top: 0;
}

.image-modal-textarea {
  width: 80%;
  height:10%;
  bottom: 30px;
  left: 0;
  margin: auto;
  overflow: auto;
  position: fixed;
  right: 0;
  text-align: center;
}

.slider {
  width: 100%;
  height: 100%;
}

/*--------------------
Form Fields Style
--------------------*/

.strabo-form .item-input {
  display: block !important;
  padding-top: 1px;
  padding-bottom: 1px;
}

.strabo-form .input-label{
  max-width: 100% !important;
  width: 100% !important;
  font-weight: bold;
  text-transform: uppercase;
  font-size: small;
  line-height: 20px;
  height: 20px;
  padding: 0px;
}

.strabo-form input{
  font-size: small;
  line-height: 20px;
  height: 20px;
  padding: 0px !important;
}

textarea {
  font-size: small;
}

.strabo-form .toggle {
  left: 16px;
}

.strabo-form .toggle-left-label {
  margin-left: 65px;
}

.field-group {
  text-transform: uppercase;
  font-weight: bold;
  padding: 6px;
}

.item-divider {
  text-transform: uppercase;
  font-weight: bold;
  padding: 6px;
}

.item-select.item-stacked-label select {
  max-width: 100%;
  width: 100%;
  margin: 0;
  height: 20px;
}

/* Select box dropdown arrow positioning */
.item-select.item-stacked-label:after {
  top: initial;
  bottom: 12%;
}

.item-checkbox {
  border-top: 0px;
  border-left: 0px;
  border-right: 0px;
  border-bottom: 0px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.item-checkbox .checkbox {
  left: 0px;
}

.login-input {
  line-height: 25px !important;
  height: 25px !important;
}

.relationship-select {
  font-weight: bold;
  text-transform: uppercase;
  font-size: small;
  line-height: 30px;
  height: 30px;
  padding-left: 15px;
}

.other-relationship {
  padding-left: 25px !important;
  padding-top: 0px !important;
  padding-bottom: 0px !important;
  line-height: 25px !important;
  height: 25px !important;
}

.strabo-field-info-button {
  min-height: 20px;
  line-height: 20px;
  top: -3px;                  /* Overwritten in web css */
  color: #387ef5;
}

.range input {
  height: 43px;               /* Set back to original for range */
}

.only-bottom-border {
  border-top: none;
  border-left: none;
  border-right: none;
}

.no-left-margin {
  margin-left: 0;
}

/*--------------------
Form Select Multiple Choices Fields Style
--------------------*/
.strabo-choices-flex-container {
  padding-left: 16px;
  margin: 0;
  list-style: none;
  -ms-box-orient: horizontal;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -moz-flex;
  display: -webkit-flex;
  display: flex;
}
.strabo-choices-flex-item {
  flex: 1 0 200px;
  margin-bottom: 1px;
  display: table;
}
@media (min-width: 410px) {
  .strabo-flex-container .strabo-choices-flex-item {
    max-width: calc(50% - 10px);
  }
}
@media (min-width: 620px) {
  .strabo-flex-container .strabo-choices-flex-item {
    max-width: calc(33.33333% - 10px);
  }
}
@media (min-width: 830px) {
  .strabo-flex-container .strabo-choices-flex-item {
    max-width: calc(25% - 10px);
  }
}
@media (min-width: 1040px) {
  .strabo-flex-container .strabo-choices-flex-item {
    max-width: calc(20% - 10px);
  }
}
@media (min-width: 1250px) {
  .strabo-flex-container .strabo-choices-flex-item {
    max-width: calc(16.66667% - 10px);
  }
}
/* ... */

